[project]
name = "ssi-code"
version = "0.0.2"
description = "Image Deconvolution via Noise-Tolerant Self-Supervised Inversion (fork)"
readme = "README.md"
authors = [
    { name = "Niklas Breitenbach-Netter", email = "niknett@gmail.com" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "BSD-3-Clause"
requires-python = ">=3.12"
dependencies = []

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
